[tool.poetry]
name = "scroll-term"
version = "0.1.3"
description = "scroll stdout!"
homepage = "https://github.com/redraw/scroll"
authors = ["redraw <redraw@sdf.org>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scroll = "scroll_term.cli:main"
